--- a/quarkus-project/src/main/resources/application.properties
+++ b/quarkus-project/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
-#quarkus.hibernate-orm.packages=org.quarkus.entity.default
-
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.password=postgres
+quarkus.datasource.username=postgres
+#quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.sql-load-script=import.sql
+#quarkus.hibernate-orm.sql-load-script=import.sql
