--- a/IRCCS - Pascale/irccs-frontend/package.json
+++ b/IRCCS - Pascale/irccs-frontend/package.json
@@ -27,7 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start" : "react-scripts start",
+    "start-ssl": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
