--- a/frontend-evaluation/DashboardEvaluation/package.json
+++ b/frontend-evaluation/DashboardEvaluation/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sti-dashboard",
+  "name": "irccs-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/sti-dashboard/",
+  "homepage": "/irccs-dashboard/",
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.16.5",
