Added test to cvreate user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,16 @@ quarkus.devservices.enabled=false
 # OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:9445/realms/master
 quarkus.oidc.client-id=irccs
-quarkus.oidc.credentials.secret=rB7ItCluX0pPEi03DIiojiUqcMCEVJU7
+quarkus.oidc.credentials.secret=lyeNRPASGGKDftqCXXvSTyEnqtmd1MPQ
 
 
 quarkus.keycloak.admin-client.enabled=true
 quarkus.keycloak.admin-client.server-url=http://localhost:9445
 quarkus.keycloak.admin-client.realm=master
 quarkus.keycloak.admin-client.client-id=irccs
-quarkus.keycloak.admin-client.client-secret=rB7ItCluX0pPEi03DIiojiUqcMCEVJU7
+quarkus.keycloak.admin-client.client-secret=lyeNRPASGGKDftqCXXvSTyEnqtmd1MPQ
 quarkus.keycloak.admin-client.grant-type=password
-quarkus.keycloak.admin-client.username=steve jobs
+quarkus.keycloak.admin-client.username=antonio
 quarkus.keycloak.admin-client.password=123
 
 quarkus.log.category."org.jboss.resteasy.reactive.common.core.AbstractResteasyReactiveContext".level=DEBUG
