--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-agroal</artifactId>
     </dependency>
+    <dependency>
+      <groupId>ca.uhn.hapi.fhir</groupId>
+      <artifactId>hapi-fhir-structures-r5</artifactId>
+      <version>6.6.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
