--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ quarkus.keycloak.admin-client.enabled=true
 quarkus.keycloak.admin-client.server-url=http://localhost:9445
 quarkus.keycloak.admin-client.realm=master
 quarkus.keycloak.admin-client.client-id=irccs
-quarkus.keycloak.admin-client.client-secret=lyeNRPASGGKDftqCXXvSTyEnqtmd1MPQ
+quarkus.keycloak.admin-client.client-secret=wcZuk0yjECulQTD9wQbgowhMnIdWAQVh
 quarkus.keycloak.admin-client.grant-type=password
-quarkus.keycloak.admin-client.username=antonio
+quarkus.keycloak.admin-client.username=keycloak
 quarkus.keycloak.admin-client.password=123
 
 quarkus.log.category."org.jboss.resteasy.reactive.common.core.AbstractResteasyReactiveContext".level=DEBUG
