--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       [
         "/bin/sh",
         "-c",
-        "cd /opt/keycloak/conf && test -f  server.keystore && echo \"$FILE exists.\" || keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname \"CN=server\" -alias server -ext \"SAN:c=DNS:localhost,IP:127.0.0.1\" -keystore server.keystore
+        "cd /opt/keycloak/conf && test -f server.keystore && echo \"server.keystore exists.\" || keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname \"CN=server\" -alias server -ext \"SAN:c=DNS:localhost,IP:127.0.0.1\" -keystore server.keystore
         && /opt/keycloak/bin/kc.sh build --db postgres && /opt/keycloak/bin/kc.sh start",
       ]
     ports:
@@ -45,7 +45,7 @@ services:
       KC_HOSTNAME_STRICT: 'false'  
       # KC_HOSTNAME: 10.99.88.227
       KC_FEATURES_TOKEN_EXCHANGE: 'enabled'
-      KC_LOG_LEVEL: debug
+      KC_LOG_LEVEL: info
       KC_METRICS_ENABLED: 'true'
       KC_PROXY: edge
       KC_HEALTH_ENABLED: 'true'
@@ -59,44 +59,3 @@ volumes:
     driver: local
   keycloak:
     driver: local
-# version: '2'
-# services:
-#   postgres:
-#       image: postgres
-#       container_name: KEYCLOAK-DB
-#       restart: always
-#       volumes:
-#         - postgres_data:/var/lib/postgresql/data
-#       environment:
-#         POSTGRES_DB: keycloak
-#         POSTGRES_USER: keycloak
-#         POSTGRES_PASSWORD: keycloak
-#       ports:
-#         - "5432:5432"
-#   keycloak:
-#       image: quay.io/keycloak/keycloak
-#       container_name: KEYCLOAK
-#       restart: always
-#       ports:
-#         - 9445:8080
-#       environment:
-#         KC_DB_URL: jdbc:postgresql://postgres/keycloak
-#         KC_DB_PORT: 5432
-#         KC_DB_DATABASE: keycloak
-#         KC_DB_USER: keycloak
-#         KC_DB_PASSWORD: keycloak
-#         KEYCLOAK_ADMIN: keycloak
-#         KEYCLOAK_ADMIN_PASSWORD: keycloak
-#         KC_HTTP_ENABLED: "true"
-#         KC_HTTPS_ENABLED: "false"
-#         KC_PROXY: edge
-#         KC_HOSTNAME_STRICT: "false"
-#       entrypoint: ["/bin/sh", "-c", "/opt/keycloak/bin/kc.sh build --db postgres && /opt/keycloak/bin/kc.sh start --optimized"]
-#       depends_on:
-#         - postgres
-
-# volumes:
-#   postgres_data:
-#       driver: local
-#   keycloak:
-#       driver: local
