PASTRL-195: First commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,43 @@ quarkus.http.port=9090
 
 quarkus.devservices.enabled=false
 
-# OIDC Configuration
-quarkus.oidc.auth-server-url=http://localhost:9445/realms/master
-quarkus.oidc.client-id=irccs
-quarkus.oidc.credentials.secret=lyeNRPASGGKDftqCXXvSTyEnqtmd1MPQ
+
+# FHIR R4 Server configuration
+org.quarkus.irccs.fhir-server=http://localhost:8080/fhir
+org.quarkus.irccs.query.limit=100
+
+quarkus.index-dependency.i3-client.group-id=org.quarkus.irccs
+quarkus.index-dependency.i3-client.artifact-id=i3-client
 
 
-quarkus.keycloak.admin-client.enabled=true
+quarkus.index-dependency.i3-annotations.group-id=org.quarkus.irccs
+quarkus.index-dependency.i3-annotations.artifact-id=i3-annotations
+
+# Liquibase minimal config properties
+#quarkus.liquibase.migrate-at-start=true
+
+# Allow all request - Only for dev
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
+quarkus.ssl.native=false
+
+#test port
+quarkus.http.test-port=8083
+quarkus.http.test-ssl-port=8446
+quarkus.log.level=WARN
+quarkus.http.test-timeout=3s
+
 quarkus.keycloak.admin-client.server-url=http://localhost:9445
-quarkus.keycloak.admin-client.realm=master
+quarkus.keycloak.admin-client.realm=pascale
 quarkus.keycloak.admin-client.client-id=irccs
-quarkus.keycloak.admin-client.client-secret=wcZuk0yjECulQTD9wQbgowhMnIdWAQVh
+quarkus.keycloak.admin-client.client-secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
+quarkus.keycloak.admin-client.username=pascale@admin.it
+quarkus.keycloak.admin-client.password=admin
 quarkus.keycloak.admin-client.grant-type=password
-quarkus.keycloak.admin-client.username=keycloak
-quarkus.keycloak.admin-client.password=123
 
 quarkus.log.category."org.jboss.resteasy.reactive.common.core.AbstractResteasyReactiveContext".level=DEBUG
+#irccs-client-db.url = bolt://localhost:7687
+#irccs-client-db.username = neo4j
+#irccs-client-db.password = test
