--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ quarkus.http.test-ssl-port=8446
 quarkus.log.level=WARN
 quarkus.http.test-timeout=3s
 
-quarkus.keycloak.admin-client.server-url=http://localhost:9445
+quarkus.keycloak.admin-client.server-url=https://localhost:9445
 quarkus.keycloak.admin-client.realm=pascale
 quarkus.keycloak.admin-client.client-id=irccs
 quarkus.keycloak.admin-client.client-secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
