--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
-quarkus.ssl.native=false
+quarkus.ssl.native=true
 
 #test port
 quarkus.http.test-port=8083
@@ -30,7 +30,8 @@ quarkus.http.test-ssl-port=8446
 quarkus.log.level=WARN
 quarkus.http.test-timeout=3s
 
-quarkus.keycloak.admin-client.server-url=https://localhost:9445
+quarkus.oidc.auth-server-url=http://localhost:9445/realms/pascale
+quarkus.keycloak.admin-client.server-url=http://localhost:9445
 quarkus.keycloak.admin-client.realm=pascale
 quarkus.keycloak.admin-client.client-id=irccs
 quarkus.keycloak.admin-client.client-secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
