--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
   <artifactId>quarkus-project</artifactId>
   <version>1.0.0</version>
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <compiler-plugin.version>3.10.1</compiler-plugin.version>
     <i3.common.version>2.0.1-SNAPSHOT</i3.common.version>
     <maven.compiler.release>17</maven.compiler.release>
