--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.devservices.enabled=false
 
 
 # FHIR R4 Server configuration
-org.quarkus.irccs.fhir-server=http://localhost:8080/fhir
+org.quarkus.irccs.fhir-server=http://fhir:8080/fhir
 org.quarkus.irccs.query.limit=100
 
 quarkus.index-dependency.i3-client.group-id=org.quarkus.irccs
@@ -24,8 +24,8 @@ quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
 quarkus.ssl.native=true
 
-quarkus.oidc.auth-server-url=http://localhost:9445/realms/pascale
-quarkus.keycloak.admin-client.server-url=http://localhost:9445
+quarkus.oidc.auth-server-url=http://keycloak:9445/realms/pascale
+quarkus.keycloak.admin-client.server-url=http://keycloak:9445
 quarkus.keycloak.admin-client.realm=pascale
 quarkus.keycloak.admin-client.client-id=irccs
 quarkus.keycloak.admin-client.client-secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
