--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.devservices.enabled=false
 
 
 # FHIR R4 Server configuration
-org.quarkus.irccs.fhir-server=http://fhir:8080/fhir
+org.quarkus.irccs.fhir-server=http://localhost:8080/fhir
 org.quarkus.irccs.query.limit=100
 
 quarkus.index-dependency.i3-client.group-id=org.quarkus.irccs
@@ -24,12 +24,21 @@ quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
 quarkus.ssl.native=true
 
-quarkus.keycloak.admin-client.server-url=http://localhost:9445
-quarkus.keycloak.admin-client.realm=pascale
-quarkus.keycloak.admin-client.client-id=irccs
-quarkus.keycloak.admin-client.client-secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
-quarkus.keycloak.admin-client.username=pascale@admin.it
-quarkus.keycloak.admin-client.password=admin
+keycloak-port=9445
+keycloak-domain=http://localhost
+keycloak-url=${keycloak-domain}:${keycloak-port}
+keycloak-client_id=irccs
+keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
+keycloak-realm=pascale
+keycloak-admin-username=pascale@admin.it
+keycloak-admin-password=admin
+
+quarkus.keycloak.admin-client.server-url=${keycloak-url}
+quarkus.keycloak.admin-client.realm=${keycloak-realm}
+quarkus.keycloak.admin-client.client-id=${keycloak-client_id}
+quarkus.keycloak.admin-client.client-secret=${keycloak-client_secret}
+quarkus.keycloak.admin-client.username=${keycloak-admin-username}
+quarkus.keycloak.admin-client.password=${keycloak-admin-password}
 quarkus.keycloak.admin-client.grant-type=password
 
 quarkus.log.category."org.jboss.resteasy.reactive.common.core.AbstractResteasyReactiveContext".level=DEBUG
@@ -43,3 +52,4 @@ quarkus.http.test-ssl-port=8446
 quarkus.log.level=WARN
 quarkus.http.test-timeout=30s
 
+ 
