Minor fix for keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
 quarkus.ssl.native=true
 
 keycloak-port=9445
-keycloak-domain=http://localhost
+keycloak-domain=http://10.99.88.146
 keycloak-url=${keycloak-domain}:${keycloak-port}
 keycloak-client_id=irccs
 keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
