--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>3.0.1.Final</quarkus.platform.version>
     <skipITs>true</skipITs>
+    <hapi.version>6.6.2</hapi.version>
     <surefire-plugin.version>3.2.3</surefire-plugin.version>
   </properties>
   <dependencyManagement>
@@ -62,17 +63,17 @@
     <dependency>
       <groupId>ca.uhn.hapi.fhir</groupId>
       <artifactId>hapi-fhir-base</artifactId>
-      <version>6.6.2</version>
+      <version>${hapi.version}</version>
     </dependency>
     <dependency>
       <groupId>ca.uhn.hapi.fhir</groupId>
       <artifactId>hapi-fhir-client</artifactId>
-      <version>6.6.2</version>
+      <version>${hapi.version}</version>
     </dependency>
     <dependency>
       <groupId>ca.uhn.hapi.fhir</groupId>
       <artifactId>hapi-fhir-structures-r5</artifactId>
-      <version>6.6.2</version>
+      <version>${hapi.version}</version>
     </dependency>
     <dependency>
       <groupId>org.quarkus.irccs</groupId>
@@ -89,11 +90,13 @@
       <artifactId>i3-assembler</artifactId>
       <version>${i3.common.version}</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>org.quarkus.irccs</groupId>
       <artifactId>i3-annotations</artifactId>
       <version>${i3.common.version}</version>
     </dependency>
+    -->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-liquibase</artifactId>
