--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ quarkus.index-dependency.i3-client.group-id=org.quarkus.irccs
 quarkus.index-dependency.i3-client.artifact-id=i3-client
 
 
-quarkus.index-dependency.i3-annotations.group-id=org.quarkus.irccs
-quarkus.index-dependency.i3-annotations.artifact-id=i3-annotations
+#quarkus.index-dependency.i3-annotations.group-id=org.quarkus.irccs
+#quarkus.index-dependency.i3-annotations.artifact-id=i3-annotations
 
 # Liquibase minimal config properties
 #quarkus.liquibase.migrate-at-start=true
@@ -25,7 +25,7 @@ quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
 quarkus.ssl.native=true
 
 keycloak-port=9445
-keycloak-domain=http://10.99.88.146
+keycloak-domain=http://localhost
 keycloak-url=${keycloak-domain}:${keycloak-port}
 keycloak-client_id=irccs
 keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
@@ -52,4 +52,3 @@ quarkus.http.test-ssl-port=8446
 quarkus.log.level=WARN
 quarkus.http.test-timeout=30s
 
- 
