--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ keycloak-realm=pascale
 keycloak-admin-username=pascale@admin.it
 keycloak-admin-password=admin
 
+
 quarkus.keycloak.admin-client.server-url=${keycloak-url}
 quarkus.keycloak.admin-client.realm=${keycloak-realm}
 quarkus.keycloak.admin-client.client-id=${keycloak-client_id}
@@ -40,6 +41,8 @@ quarkus.keycloak.admin-client.client-secret=${keycloak-client_secret}
 quarkus.keycloak.admin-client.username=${keycloak-admin-username}
 quarkus.keycloak.admin-client.password=${keycloak-admin-password}
 quarkus.keycloak.admin-client.grant-type=password
+quarkus.keycloak.policy-enforcer.paths.0.path=/fhir/auth/users/signup
+quarkus.keycloak.policy-enforcer.paths.0.enforcement-mode=DISABLED
 
 quarkus.log.category."org.jboss.resteasy.reactive.common.core.AbstractResteasyReactiveContext".level=DEBUG
 #irccs-client-db.url = bolt://localhost:7687
