--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,16 @@ version: '3.1'
 
 services:
 
+  hapi:
+    image: "hapiproject/hapi:latest"
+    container_name: APIFHIRSERVER
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./configs:/data/hapi
+    environment:
+      SPRING_CONFIG_LOCATION: 'file:///data/hapi/irccs-application.yaml'
+
   keycloak:
     image: quay.io/keycloak/keycloak
     container_name: KEYCLOAK
