--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 quarkus.http.port=9090
 
-quarkus.devservices.enabled=false
-
-
 # FHIR R4 Server configuration
 org.quarkus.irccs.fhir-server=http://localhost:8080/fhir
 org.quarkus.irccs.query.limit=100
@@ -55,3 +52,7 @@ quarkus.http.test-ssl-port=8446
 quarkus.log.level=WARN
 quarkus.http.test-timeout=30s
 
+# Tell Dev Services for Keycloak to import the realm file
+# This property is not effective when running the application in JVM or native modes
+quarkus.devservices.enabled=true
+quarkus.keycloak.devservices.realm-path=quarkus-realm.json
