--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
   <artifactId>quarkus-project</artifactId>
   <version>1.0.0</version>
   <properties>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.home>${user.home}/.m2/settings.xml</maven.home>
+    <hapi.version>6.6.2</hapi.version>
     <i3.common.version>2.0.4-SNAPSHOT</i3.common.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.home>${user.home}/.m2/settings.xml</maven.home>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>3.7.4</quarkus.platform.version>
-    <hapi.version>6.6.2</hapi.version>
     <surefire.version>3.0.0-M7</surefire.version>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -76,13 +76,14 @@
       <artifactId>i3-assembler</artifactId>
       <version>${i3.common.version}</version>
     </dependency>
-    <!--
     <dependency>
-      <groupId>org.quarkus.irccs</groupId>
-      <artifactId>i3-annotations</artifactId>
-      <version>${i3.common.version}</version>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-oidc</artifactId>
     </dependency>
-    -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-keycloak-authorization</artifactId>
+    </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
@@ -165,10 +166,6 @@
           <name>native</name>
         </property>
       </activation>
-      <properties>
-        <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.enable-https-url-handler>true</quarkus.native.enable-https-url-handler>
-      </properties>
       <build>
         <plugins>
           <plugin>
@@ -182,12 +179,8 @@
                 </goals>
                 <configuration>
                   <systemPropertyVariables>
-                    <native.image.path>
-                      ${project.build.directory}/${project.build.finalName}-runner
-                    </native.image.path>
-                    <java.util.logging.manager>
-                      org.jboss.logmanager.LogManager
-                    </java.util.logging.manager>
+                    <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                     <maven.home>${maven.home}</maven.home>
                   </systemPropertyVariables>
                 </configuration>
@@ -196,6 +189,10 @@
           </plugin>
         </plugins>
       </build>
+      <properties>
+        <quarkus.native.enable-https-url-handler>true</quarkus.native.enable-https-url-handler>
+        <quarkus.package.type>native</quarkus.package.type>
+      </properties>
     </profile>
     <profile>
       <id>docker</id>
