--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,32 @@
-#quarkus.http.port=9090
+# Project PORT Mapping - PROD
+%prod.quarkus.http.port=9090
 
-# FHIR R5 Server configuration
-org.quarkus.irccs.fhir-server=http://localhost:8980/fhir
+# FHIR R5 Server configuration - DEV
+org.quarkus.irccs.fhir-server=http://localhost:${quarkus.testcontainers.hapi.port}/fhir
 org.quarkus.irccs.query.limit=100
 
+# FHIR R5 Server configuration - PROD
+%prod.org.quarkus.irccs.fhir-server=http://fhir:8080/fhir
+%prod.org.quarkus.irccs.query.limit=100
+
+# Index Dependencies needed for I3-COMMON library
 quarkus.index-dependency.i3-client.group-id=org.quarkus.irccs
 quarkus.index-dependency.i3-client.artifact-id=i3-client
 
-
-#quarkus.index-dependency.i3-annotations.group-id=org.quarkus.irccs
-#quarkus.index-dependency.i3-annotations.artifact-id=i3-annotations
-
-# Allow all request - Only for dev
+# Allow All request
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
 quarkus.ssl.native=true
 
-#keycloak-port=9445
-#keycloak-domain=http://localhost
-#keycloak-url=${keycloak-domain}:${keycloak-port}
+
+# Keycloak Variables
+%prod.keycloak-port=9445
+keycloak-port=${kc.admin.port.test:45180}
+%prod.keycloak-domain=http://10.99.88.146
+keycloak-domain=http://localhost
+keycloak-url=${keycloak-domain}:${keycloak-port}
 keycloak-client_id=irccs
 keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
 keycloak-realm=pascale
@@ -28,7 +34,8 @@ keycloak-admin-username=pascale@admin.it
 keycloak-admin-password=admin
 
 
-%test.quarkus.keycloak.admin-client.server-url=http://localhost:${kc.admin.port.test:45180}
+# Keycloak ADMIN Client
+quarkus.keycloak.admin-client.server-url=${keycloak-url}
 quarkus.keycloak.admin-client.realm=${keycloak-realm}
 quarkus.keycloak.admin-client.client-id=${keycloak-client_id}
 quarkus.keycloak.admin-client.client-secret=${keycloak-client_secret}
@@ -36,41 +43,19 @@ quarkus.keycloak.admin-client.username=${keycloak-admin-username}
 quarkus.keycloak.admin-client.password=${keycloak-admin-password}
 quarkus.keycloak.admin-client.grant-type=password
 
-#%prod.quarkus.oidc.auth-server-url=https://localhost:8443/realms/${keycloak-realm}
-#quarkus.oidc.client-id=${keycloak-client_id}
-#quarkus.oidc.credentials.secret=${keycloak-client_secret}
-#quarkus.oidc.tls.verification=none
+# Devservices variables
+quarkus.devservices.enabled=true
+quarkus.keycloak.devservices.port=${kc.admin.port.test:45180}
+quarkus.keycloak.devservices.realm-path=pascale-realm.json
 
-# Enable Policy Enforcement
-#quarkus.keycloak.policy-enforcer.enable=true
-#quarkus.keycloak.policy-enforcer.paths.0.path=/fhir/auth/users/signup
-#quarkus.keycloak.policy-enforcer.paths.0.enforcement-mode=DISABLED
-
-#quarkus.log.category."org.jboss.resteasy.reactive.common.core.AbstractResteasyReactiveContext".level=DEBUG
-#irccs-client-db.url = bolt://localhost:7687
-#irccs-client-db.username = neo4j
-#irccs-client-db.password = test
-
-#test port
-#quarkus.http.test-port=8083
-#quarkus.http.test-ssl-port=8446
-#quarkus.log.level=WARN
-#quarkus.http.test-timeout=30s
-
-# Tell Dev Services for Keycloak to import the realm file
-# This property is not effective when running the application in JVM or native modes
-#quarkus.devservices.enabled=true
-
-%prod.quarkus.oidc.auth-server-url=https://localhost:8443/realms/pascale
-quarkus.oidc.client-id=irccs
-quarkus.oidc.credentials.secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
+# Keycloak OIDC Connection
+%prod.quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
+quarkus.oidc.client-id=${keycloak-client_id}
+quarkus.oidc.credentials.secret=${keycloak-client_secret}
 quarkus.oidc.tls.verification=none
-%test.quarkus.keycloak.devservices.port=${kc.admin.port.test:45180}
+
 # Enable Policy Enforcement
 quarkus.keycloak.policy-enforcer.enable=true
 quarkus.keycloak.policy-enforcer.paths.0.path=/fhir/auth/users/signup
 quarkus.keycloak.policy-enforcer.paths.0.enforcement-mode=DISABLED
 
-# Tell Dev Services for Keycloak to import the realm file
-# This property is not effective when running the application in JVM or native modes
-quarkus.keycloak.devservices.realm-path=pascale-realm.json
