--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,5 +62,10 @@ quarkus.oidc.devui.web-client-timeout=10000
 # Enable Policy Enforcement
 quarkus.keycloak.policy-enforcer.enable=true
 quarkus.keycloak.policy-enforcer.paths.0.path=/fhir/auth/users/signup
+quarkus.keycloak.policy-enforcer.paths.1.path=/fhir/auth/users/token
+quarkus.keycloak.policy-enforcer.paths.2.path=/fhir/auth/users/logout
 quarkus.keycloak.policy-enforcer.paths.0.enforcement-mode=DISABLED
+quarkus.keycloak.policy-enforcer.paths.1.enforcement-mode=DISABLED
+quarkus.keycloak.policy-enforcer.paths.2.enforcement-mode=DISABLED
+quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 
