Minor fix for testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,5 @@ quarkus.keycloak.policy-enforcer.paths.1.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.2.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 
+#necessario per i test sul container devservices di hapi fhir jpa
+quarkus.http.test-timeout=120s
