--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 %prod.org.quarkus.irccs.query.limit=100
 
 # FHIR R5 Server configuration - DEV
-org.quarkus.irccs.fhir-server=${quarkus.base-url}:${quarkus.hapi.devservices.port:60586}/fhir
+org.quarkus.irccs.fhir-server=${hapi.base-url}:${quarkus.hapi.devservices.port:60586}/fhir
 org.quarkus.irccs.query.limit=100
 
 # Index Dependencies needed for I3-COMMON library
@@ -25,10 +25,10 @@ quarkus.ssl.native=true
 
 # Keycloak Variables - DEV
 keycloak-port=${kc.admin.port.test:45180}
-keycloak-domain=${quarkus.base-url}
+keycloak-domain=${hapi.base-url}
 
 # Variables
-quarkus.base-url=http://localhost
+hapi.base-url=http://localhost
 keycloak-url=${keycloak-domain}:${keycloak-port}
 keycloak-client_id=irccs
 keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
