--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 %prod.org.quarkus.irccs.fhir-server=http://fhir:8080/fhir
 %prod.org.quarkus.irccs.query.limit=100
 
+%prod.quarkus.rest-client.practitioner-microservice-client.url=http://irccs-practitioner:8384
+
 # FHIR R5 Server configuration - DEV
 org.quarkus.irccs.fhir-server=${hapi.base-url}:${quarkus.hapi.devservices.port:60586}/fhir
 org.quarkus.irccs.query.limit=100
