Revert "fix updatepassword with bearertoken"
This reverts commit 0ebeaa7b9688aff17e66cf2fc9dcef8fafc70e75.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,10 +67,12 @@ quarkus.keycloak.policy-enforcer.paths.0.path=/fhir/auth/users/signup
 quarkus.keycloak.policy-enforcer.paths.1.path=/fhir/auth/users/token
 quarkus.keycloak.policy-enforcer.paths.2.path=/fhir/auth/users/logout
 quarkus.keycloak.policy-enforcer.paths.3.path=/fhir/auth/users/forgotPassword
+quarkus.keycloak.policy-enforcer.paths.4.path=/fhir/auth/users/updatePassword
 quarkus.keycloak.policy-enforcer.paths.0.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.1.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.2.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.paths.3.enforcement-mode=DISABLED
+quarkus.keycloak.policy-enforcer.paths.4.enforcement-mode=DISABLED
 quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 
 #necessario per i test sul container devservices di hapi fhir jpa
