test mailer quarkus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,3 +79,9 @@ quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 
 #necessario per i test sul container devservices di hapi fhir jpa
 quarkus.http.test-timeout=120s
+
+quarkus.mailer.from=gennaro.aurilia@gmail.com 
+quarkus.mailer.host=smtp.gmail.com
+quarkus.mailer.port=587
+quarkus.mailer.username=gennaro.aurilia@gmail.com
+quarkus.mailer.password=elvnlmhuszndsskg
