test reactive mailer quarkus change login in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,3 +85,5 @@ quarkus.mailer.host=smtp.gmail.com
 quarkus.mailer.port=587
 quarkus.mailer.username=gennaro.aurilia@gmail.com
 quarkus.mailer.password=elvnlmhuszndsskg
+quarkus.mailer.login=gennaro.aurilia@gmail.com
+
