--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,10 +80,12 @@ quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 #necessario per i test sul container devservices di hapi fhir jpa
 quarkus.http.test-timeout=120s
 
-quarkus.mailer.from=gennaro.aurilia@gmail.com 
+quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
+quarkus.mailer.from=gennaro.aurilia@gmail.com
 quarkus.mailer.host=smtp.gmail.com
 quarkus.mailer.port=587
+quarkus.mailer.start-tls=REQUIRED
 quarkus.mailer.username=gennaro.aurilia@gmail.com
 quarkus.mailer.password=elvnlmhuszndsskg
-quarkus.mailer.login=gennaro.aurilia@gmail.com
 
+quarkus.mailer.mock=false
