--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 %prod.org.quarkus.irccs.query.limit=100
 
 %prod.quarkus.rest-client.practitioner-microservice-client.url=http://irccs-practitioner:8384
+%prod.quarkus.rest-client.organization-microservice-client.uri=http://irccs-centro-ricerca:8181
 
 # FHIR R5 Server configuration - DEV
 org.quarkus.irccs.fhir-server=${hapi.base-url}:${quarkus.hapi.devservices.port:60586}/fhir
