--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,7 @@ keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
 keycloak-realm=pascale
 keycloak-admin-username=pascale@admin.it
 keycloak-admin-password=admin
+keycloak-grant-type=CLIENT_CREDENTIALS
 
 
 # Keycloak ADMIN Client
@@ -45,9 +46,9 @@ quarkus.keycloak.admin-client.server-url=${keycloak-url}
 quarkus.keycloak.admin-client.realm=${keycloak-realm}
 quarkus.keycloak.admin-client.client-id=${keycloak-client_id}
 quarkus.keycloak.admin-client.client-secret=${keycloak-client_secret}
-quarkus.keycloak.admin-client.username=${keycloak-admin-username}
-quarkus.keycloak.admin-client.password=${keycloak-admin-password}
-quarkus.keycloak.admin-client.grant-type=password
+# quarkus.keycloak.admin-client.username=${keycloak-admin-username}
+# quarkus.keycloak.admin-client.password=${keycloak-admin-password}
+quarkus.keycloak.admin-client.grant-type=${keycloak-grant-type}
 
 # Devservices variables
 quarkus.keycloak.devservices.port=${kc.admin.port.test:45180}
