Minor fix properties keycloak domain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ quarkus.ssl.native=true
 
 # Keycloak Variables - PROD
 %prod.keycloak-port=9445
-%prod.keycloak-domain=http://10.99.88.146
+%prod.keycloak-domain=http://irccs-keycloak
 
 # Keycloak Variables - DEV
 keycloak-port=${kc.admin.port.test:45180}
