--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,7 +89,7 @@ quarkus.mailer.from=noreply-pascale@admin.it
 quarkus.mailer.host=smtp.gmail.com
 quarkus.mailer.port=587
 quarkus.mailer.start-tls=REQUIRED
-quarkus.mailer.username=gennaro.aurilia@gmail.com
-quarkus.mailer.password=elvnlmhuszndsskg
+quarkus.mailer.username=i3.irccs.test@gmail.com
+quarkus.mailer.password=obenilpyephupybx
 
 quarkus.mailer.mock=false
