--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,3 +93,5 @@ quarkus.mailer.username=i3.irccs.test@gmail.com
 quarkus.mailer.password=obenilpyephupybx
 
 quarkus.mailer.mock=false
+quarkus.log.level=DEBUG
+quarkus.log.category."org.jboss.resteasy".level=DEBUG
