--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ quarkus.ssl.native=true
 # Keycloak Variables - PROD
 %prod.keycloak-port=9445
 %prod.keycloak-domain=http://irccs-keycloak
-
+%prod.keycloak-url=${keycloak-domain}
 # Keycloak Variables - DEV
 keycloak-port=${kc.admin.port.test:45180}
 keycloak-domain=${hapi.base-url}
