--- a/DockerfileK
+++ b/DockerfileK
@@ -7,8 +7,8 @@ RUN apt-get update && apt-get install -y dos2unix iputils-ping curl procps nano
 RUN echo '#!/bin/sh' > /app/start.sh && \
     echo 'echo "Starting application..."' >> /app/start.sh && \
     echo 'java -jar /app/quarkus-run.jar' >> /app/start.sh && \
-    echo 'echo "Application exited."' >> /app/start.sh && \
-    chmod +x /app/start.sh
+    echo 'echo "Application exited."' >> /app/start.sh
+RUN chmod +x /app/start.sh
 
 
 CMD ["/app/start.sh"]
