Upgraded: JAVA to latest TLS (21) Fhir Core Packages Quarkus Platform Version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,7 +56,7 @@ quarkus.keycloak.devservices.realm-path=pascale-realm.json
 quarkus.devservices.timeout=10m
 
 # Keycloak OIDC Connection
-%prod.quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
+quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.token.issuer=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.client-id=${keycloak-client_id}
 quarkus.oidc.credentials.secret=${keycloak-client_secret}
