Upgraded: JAVA to latest TLS (21) Fhir Core Packages Quarkus Platform Version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 %prod.quarkus.http.port=9090
-
+quarkus.http.port=9090
 # FHIR R5 Server configuration - PROD
 %prod.org.quarkus.irccs.fhir-server=http://fhir:8080/fhir
 %prod.org.quarkus.irccs.query.limit=100
@@ -24,10 +24,10 @@ quarkus.ssl.native=true
 
 # Keycloak Variables - PROD
 %prod.keycloak-port=9445
-%prod.keycloak-domain=http://irccs-keycloak
+%prod.keycloak-domain=http://localhost
 %prod.keycloak-url=${keycloak-domain}
 # Keycloak Variables - DEV
-keycloak-port=${kc.admin.port.test:45180}
+keycloak-port=${kc.admin.port.test:9445}
 keycloak-domain=${hapi.base-url}
 
 # Variables
@@ -56,7 +56,7 @@ quarkus.keycloak.devservices.realm-path=pascale-realm.json
 quarkus.devservices.timeout=10m
 
 # Keycloak OIDC Connection
-quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
+%prod.quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.token.issuer=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.client-id=${keycloak-client_id}
 quarkus.oidc.credentials.secret=${keycloak-client_secret}
@@ -83,6 +83,8 @@ quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 
 #necessario per i test sul container devservices di hapi fhir jpa
 quarkus.http.test-timeout=120s
+
+quarkus.devservices.enabled=false
 
 quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
 quarkus.mailer.from=noreply-pascale@admin.it
