PASTRL-337 fix config oidc v2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,6 +62,8 @@ quarkus.oidc.client-id=${keycloak-client_id}
 quarkus.oidc.credentials.secret=${keycloak-client_secret}
 quarkus.oidc.tls.verification=none
 quarkus.oidc.devui.web-client-timeout=10000
+quarkus.oidc.token.allow-jwt-introspection=false
+quarkus.oidc.token.allow-opaque-token-introspection=fals
 
 # Enable Policy Enforcement
 quarkus.keycloak.policy-enforcer.enable=true
