Added the permit All to public paths

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,7 +61,6 @@ quarkus.oidc.token.issuer=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.client-id=${keycloak-client_id}
 quarkus.oidc.credentials.secret=${keycloak-client_secret}
 quarkus.oidc.tls.verification=none
-quarkus.oidc.devui.web-client-timeout=10000
 
 
 # Enable Policy Enforcement
@@ -94,5 +93,5 @@ quarkus.mailer.username=i3.irccs.test@gmail.com
 quarkus.mailer.password=obenilpyephupybx
 
 quarkus.mailer.mock=false
-quarkus.log.level=DEBUG
-quarkus.log.category."org.jboss.resteasy".level=DEBUG
+#quarkus.log.level=DEBUG
+#quarkus.log.category."org.jboss.resteasy".level=DEBUG
