--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,10 +34,10 @@ keycloak-domain=${hapi.base-url}
 hapi.base-url=http://localhost
 keycloak-url=${keycloak-domain}:${keycloak-port}
 keycloak-client_id=irccs
-keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
-keycloak-realm=pascale
-keycloak-admin-username=pascale@admin.it
-keycloak-admin-password=admin
+keycloak-client_secret=YcXTc2BxoZvITr4b1bhzhCTpPTtKhsvG
+keycloak-realm=pascale26
+keycloak-admin-username=gennaro.aurilia@gmail.com
+keycloak-admin-password=Qwerty123!
 keycloak-grant-type=CLIENT_CREDENTIALS
 
 
