--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 %prod.quarkus.http.port=9090
+quarkus.http.port=9090
 
 # FHIR R5 Server configuration - PROD
 %prod.org.quarkus.irccs.fhir-server=http://fhir:8080/fhir
 %prod.org.quarkus.irccs.query.limit=100
 
-%prod.quarkus.rest-client.practitioner-microservice-client.url=http://irccs-practitioner:8384
-%prod.quarkus.rest-client.organization-microservice-client.uri=http://irccs-centro-ricerca:8181
+quarkus.rest-client.practitioner-microservice-client.url=http://localhost:8181/
+quarkus.rest-client.organization-microservice-client.uri=http://localhost:8181/
 
 # FHIR R5 Server configuration - DEV
 org.quarkus.irccs.fhir-server=${hapi.base-url}:${quarkus.hapi.devservices.port:60586}/fhir
@@ -27,7 +28,7 @@ quarkus.ssl.native=true
 %prod.keycloak-domain=http://irccs-keycloak
 %prod.keycloak-url=${keycloak-domain}
 # Keycloak Variables - DEV
-keycloak-port=${kc.admin.port.test:45180}
+keycloak-port=${kc.admin.port.test:9445}
 keycloak-domain=${hapi.base-url}
 
 # Variables
@@ -36,10 +37,9 @@ keycloak-url=${keycloak-domain}:${keycloak-port}
 keycloak-client_id=irccs
 keycloak-client_secret=cwvB6qAn5iFl7pa9r04WxkordJyy3tjS
 keycloak-realm=pascale
-keycloak-admin-username=pascale@admin.it
-keycloak-admin-password=admin
+keycloak-admin-username=gennaro.aurilia@gmail.com
+keycloak-admin-password=Qwerty123!
 keycloak-grant-type=CLIENT_CREDENTIALS
-
 
 # Keycloak ADMIN Client
 quarkus.keycloak.admin-client.server-url=${keycloak-url}
@@ -57,12 +57,14 @@ quarkus.devservices.timeout=10m
 
 # Keycloak OIDC Connection
 %prod.quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
+quarkus.oidc.auth-server-url=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.token.issuer=${keycloak-url}/realms/${keycloak-realm}
 quarkus.oidc.client-id=${keycloak-client_id}
 quarkus.oidc.credentials.secret=${keycloak-client_secret}
 quarkus.oidc.tls.verification=none
 quarkus.oidc.devui.web-client-timeout=10000
 
+disable.authorization=true
 # Enable Policy Enforcement
 quarkus.keycloak.policy-enforcer.enable=true
 quarkus.keycloak.policy-enforcer.paths.0.path=/fhir/auth/users/signup
@@ -83,6 +85,7 @@ quarkus.keycloak.policy-enforcer.http-method-as-scope=true
 
 #necessario per i test sul container devservices di hapi fhir jpa
 quarkus.http.test-timeout=120s
+quarkus.devservices.enabled=false
 
 quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
 quarkus.mailer.from=noreply-pascale@admin.it
@@ -93,5 +96,5 @@ quarkus.mailer.username=i3.irccs.test@gmail.com
 quarkus.mailer.password=obenilpyephupybx
 
 quarkus.mailer.mock=false
-quarkus.log.level=DEBUG
-quarkus.log.category."org.jboss.resteasy".level=DEBUG
+#quarkus.log.level=DEBUG
+#quarkus.log.category."org.jboss.resteasy".level=DEBUG
